--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "next": "15.1.3",
     "node": "^23.5.0",
     "react": "^19.0.0",
