--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
+    "moment": "^2.30.1",
     "next": "15.1.3",
     "node": "^23.5.0",
     "react": "^19.0.0",
